# rs_oss_cli

./: ._Cargo.toml  ._src  Cargo.toml  README.md  config.yaml
src/: ._lib.rs  ._main.rs  lib.rs  main.rs
