[package]
name = "rs_oss_cli"
version = "0.1.1"
edition = "2021"
authors = ["Eil <yuanmingchao0718@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple command line tool for oss"
repository = "https://github.com/InkCoderYmc/rs_oss_cli"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
credentials = "0.12.0"
walkdir = "2.5.0"
serde ={ version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9.34"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
